# Backup

./: LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: tests.yml
app/: cli.py  gui.py  logging_config.py
app/widgets/: crate_warning_widget.py  create_backup_widget.py  create_items_widget.py  create_settings_widget.py
core/: backup.py  cleaner.py  list.py  restore.py  temp_backup.py  utils.py
tests/: test_backup.py  test_cleaner.py  test_list.py  test_restore.py  test_temp_backup.py
